--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/db793d0a28.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>kiddy Frame</title>
+    <title>kiddy Frame 1</title>
 </head>
 <body>
     <!-- main  -->
